# Robocook

./: .gitignore  README.md  cache.json  docker-compose.yml
ingest/: ingest.py  ingredients.txt  preferences.txt  restrictions.txt  structure.sql  task.json
recipe_generation/: CMakeLists.txt  Dockerfile.robocook  package.xml  requirements.txt
recipe_generation/scripts/: cache.json  rag_interaction.py  rag_node.py
recipe_generation/src/: cache.json  rag_node.py
src/: cache.json  rag_node.py
test/: lexical_search.py  vector_similarity.py
