<?xml version="1.0"?>
<package format="3">
  <name>recipe_generation</name>
  <version>1.0.0</version>
  <description>Recipe generation package</description>
  
  <maintainer email="edidier11@outlook.com">Didier Aguilar</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>

  <exec_depend>std_msgs</exec_depend>

  <!-- Python dependencies -->
  <exec_depend>sentence_transformers</exec_depend>
  <exec_depend>ollama</exec_depend>
  <exec_depend>psycopg2</exec_depend>
  <exec_depend>logging</exec_depend>
  <exec_depend>json</exec_depend>
  <exec_depend>os</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>